Add some CSS fix

--- a/app/views/flows/index.html.erb
+++ b/app/views/flows/index.html.erb
@@ -7,7 +7,7 @@
       <%= f.submit "Create", disabled: true, id: 'flows-btn', class: "block w-full mt-4 rounded-md bg-green-500 px-6 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-400 visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 cursor-pointer", title: "search query", name: "submit", data: {"flow-target" => 'buttonFlow'} %>
     <% end %>
   </div>
-  <div class="mt-6">
+  <div class="mt-3 md:mt-6">
     <a class="text-base font-semibold text-gray-900 hover:underline hover:text-sky-500" href="/">
       searq.org 
     </a>
