--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -2,7 +2,7 @@
   <a class="text-base font-semibold text-red-500 hover:text-red-400" href="/"><i class="fa-solid fa-rss"></i></a>
   <h1 class="mt-4 text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Stats</h1>
   <div class="mt-6">
-    <dl class="mt-5 grid grid-cols-1 gap-4 sm:grid-cols-4">
+    <dl class="mt-5 grid grid-cols-1 gap-2 md:gap-4 sm:grid-cols-4">
       <div class="overflow-hidden rounded-lg bg-white px-4 py-5 border sm:p-6">
         <dt class="truncate text-sm font-medium text-gray-500">Total Feeds</dt>
         <dd class="mt-1 text-3xl font-semibold tracking-tight text-indigo-500">
@@ -25,7 +25,7 @@
       </div>
     </dl>
   </div>
-  <div class="mt-6">
+  <div class="mt-3 md:mt-6">
     <a class="text-base font-semibold text-gray-900 hover:underline hover:text-sky-500" href="/">
       searq.org 
     </a>
