--- a/app/views/exports/index.html.erb
+++ b/app/views/exports/index.html.erb
@@ -7,7 +7,7 @@
       <%= f.submit "Export", disabled: true, id: 'export-btn', class: "block w-full mt-4 rounded-md bg-yellow-500 px-6 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-yellow-400 visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 cursor-pointer", title: "search query", name: 'submit', data: {"export-target" => 'button'} %>
     <% end %>
   </div>
-  <div class="mt-6">
+  <div class="mt-3 md:mt-6">
     <a class="text-base font-semibold text-gray-900 hover:underline hover:text-sky-500" href="/">
       searq.org 
     </a>
