--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center" data-controller="hello">
   <p class="text-base font-semibold text-indigo-600"><i class="fa-solid fa-rss"></i></p>
   <h1 class="mt-4 text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">SearQ</h1>
-  <p class="mt-4 text-sm md:text-lg leading-7 text-gray-600">Free, Fast and Cool, RESTful <span class="bg-yellow-500 text-white p-1 rounded">RSS based</span> Search Engine.</p>
+  <p class="mt-4 text-xs sm:text-sm md:text-lg leading-7 text-gray-600">Free, Fast and Cool, RESTful <span class="bg-yellow-500 text-white px-1.5 py-1 rounded">RSS based</span> Search Engine.</p>
   <div class=" text-left mt-5 relative z-10 col-span-3 bg-slate-800 rounded-lg shadow-lg xl:ml-0 dark:shadow-none dark:ring-1 dark:ring-inset dark:ring-white/10">
     <div class="relative flex text-slate-400 text-xs leading-6">
       <div class="mt-2 flex-none text-sky-300 border-t border-b border-t-transparent border-b-sky-300 px-4 py-1 flex items-center"><%= @url %></div>
@@ -21,7 +21,7 @@
       <div class="w-full border-t border-gray-300"></div>
     </div>
     <div class="relative flex justify-center">
-      <span class="border border-gray-200 rounded text-gray-600 bg-white px-3 text-sm md:text-base leading-6">actions</span>
+      <span class="border border-gray-200 rounded text-gray-500 bg-white px-3 text-sm leading-6">actions</span>
     </div>
   </div>
   <div class="mt-6 flex items-center justify-center">
