Add error pages 404,422,500

--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -21,7 +21,7 @@
       <div class="w-full border-t border-gray-300"></div>
     </div>
     <div class="relative flex justify-center">
-      <span class="border border-gray-200 rounded text-gray-500 bg-white px-3 text-sm leading-6">actions</span>
+      <span class="border border-gray-200 rounded text-gray-500 bg-white px-3 text-xs leading-6">actions</span>
     </div>
   </div>
   <div class="mt-6 flex items-center justify-center">
