--- a/app/views/flows/index.html.erb
+++ b/app/views/flows/index.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   </div>
   <div class="mt-3 md:mt-6">
-    <a class="text-base font-semibold text-gray-900 hover:underline hover:text-sky-500" href="/">
+    <a class="text-base text-gray-900 hover:underline hover:text-sky-500" href="/">
       searq.org 
     </a>
   </div>
