--- a/app/views/flows/show.html.erb
+++ b/app/views/flows/show.html.erb
@@ -38,7 +38,7 @@
     <% end %>
   </div>
   <div class="mt-6">
-    <a class="text-base font-semibold text-gray-900 hover:underline hover:text-sky-500" href="/flows">
+    <a class="text-base text-gray-900 hover:underline hover:text-sky-500" href="/flows">
       searq.org/flows
     </a>
   </div>
