CHange landing page button label to icons

--- a/app/views/flows/show.html.erb
+++ b/app/views/flows/show.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="mt-6">
     <a class="text-base text-gray-900 hover:underline hover:text-sky-500" href="/flows">
-      searq.org/flows
+      <- back
     </a>
   </div>
 </div>
