--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -16,27 +16,20 @@
       <pre class="text leading-6 text-slate-50 flex ligatures-none overflow-auto"><code class="flex-none min-w-full p-6 md:p-8"><span class="flex"><svg viewBox="0 -9 3 24" aria-hidden="true" class="flex-none overflow-visible text-pink-400 w-auto h-6 mr-3"><path d="M0 0L3 3L0 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="flex-auto"><span class="font-semibold">GET</span> /search.json -d 'q={q}'</span></span></code></pre>
     </div>
   </div>
-  <div class="relative my-6">
-    <div class="absolute inset-0 flex items-center" aria-hidden="true">
-      <div class="w-full border-t border-gray-300"></div>
-    </div>
-    <div class="relative flex justify-center">
-      <span class="border border-gray-200 rounded text-gray-500 bg-white px-3 text-xs leading-6">actions</span>
-    </div>
-  </div>
+
   <div class="mt-6 flex items-center justify-center">
-    <span class="isolate inline-flex rounded-md shadow-sm w-8/12">
-      <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative items-center rounded-l-md bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-3/12">
-        Docs
+    <span class="isolate inline-flex  w-6/12">
+      <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative items-center rounded-l bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-full">
+        <i class="fa-brands fa-github"></i>
       </a>
-      <%= link_to exports_path, id: 'export-tool-btn', class: "relative -ml-px  items-center bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 hover:underline focus:z-10 w-3/12" do %>
-        Export
+      <%= link_to exports_path, id: 'export-tool-btn', class: "relative -ml-px  items-center bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 hover:underline focus:z-10 w-full" do %>
+        <i class="fa-solid fa-file-export"></i>
       <% end %>
-      <%= link_to flows_path, id: 'flows-tool-btn', class: "relative -ml-px  items-center bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-green-50 hover:underline focus:z-10 w-3/12" do %>
-        Flows
+      <%= link_to flows_path, id: 'flows-tool-btn', class: "relative -ml-px  items-center bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-green-50 hover:underline focus:z-10 w-full" do %>
+        <i class="fa-solid fa-bars-staggered"></i>
       <% end %>
-      <%= link_to stats_path, id: 'stats-btn', class: "relative -ml-px  items-center rounded-r-md bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-red-50 hover:underline focus:z-10 w-3/12" do %>
-        Stats
+      <%= link_to stats_path, id: 'stats-btn', class: "relative -ml-px  items-center rounded-r bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-red-50 hover:underline focus:z-10 w-full" do %>
+        <i class="fa-solid fa-chart-line"></i>
       <% end %>
     </span>
   </div>
