Transfer ownership github repo

--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -5,7 +5,7 @@
     <p class="mt-6 text-base leading-7 text-gray-600">The server encountered an internal error or misconfiguration and was unable to complete your request.</p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
       <a href="/" class="rounded-md bg-red-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">searq.org</a>
-      <a href="https://github.com/searq/searq.org" class="text-sm font-semibold text-gray-900">github <span aria-hidden="true">&rarr;</span></a>
+      <a href="https://github.com/davidesantangelo/searq.org" class="text-sm font-semibold text-gray-900">github <span aria-hidden="true">&rarr;</span></a>
     </div>
   </div>
 </main>
