--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      
+
       gtag('config', 'G-F74YF5W1BQ');
     </script>
     <title>SearQ</title>
@@ -38,10 +38,10 @@
     <footer class="absolute bottom-0 right-0 left-0 text-center">
       <div class="mx-auto max-w-7xl py-6 px-6 lg:px-8 text-gray-800">
         <div class="mt-6 md:order-1 md:mt-0 hidden md:block">
-          <p class="text-center text-sm leading-5">Code created by <a title="Davide Santangelo" href="https://twitter.com/daviducolo" class="hover:underline font-semibold">Davide</a> can be found on <a href="https://github.com/searq/searq.org" class="hover:underline font-semibold">GitHub</a></p>
+          <p class="text-center text-sm leading-5">Code created by <a title="Davide Santangelo" href="https://twitter.com/daviducolo" class="hover:underline font-semibold">Davide</a> can be found on <a href="https://github.com/davidesantangelo/searq.org" class="hover:underline font-semibold">GitHub</a></p>
         </div>
         <div class="mt-6 md:order-1 md:mt-0 md:hidden block">
-          <p class="text-center text-sm leading-5"><a href="https://github.com/searq/searq.org" class="hover:underline font-semibold">GitHub</a></p>
+          <p class="text-center text-sm leading-5"><a href="https://github.com/davidesantangelo/searq.org" class="hover:underline font-semibold">GitHub</a></p>
         </div>
       </div>
     </footer>
@@ -53,32 +53,32 @@
       content: 'View on GitHub',
       placement: 'bottom'
     });
-    
+
     tippy('#docs-btn', {
       content: 'Getting started with SearQ',
       placement: 'bottom'
     });
-    
+
     tippy('#export-tool-btn', {
       content: 'Try the awesome export Tool',
       placement: 'bottom'
     });
-    
+
     tippy('#export-btn', {
       content: 'Export data as CSV (max 1000 items per query)',
       placement: 'bottom'
     });
-    
+
     tippy('#stats-btn', {
       content: 'See some stats about data',
       placement: 'bottom'
     });
-    
+
     tippy('#flows-tool-btn', {
       content: 'Create your own flow',
       placement: 'bottom'
     });
-    
+
     tippy('#flows-btn', {
       content: 'Create your own SearQ endpoint',
       placement: 'bottom'
