--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -19,7 +19,7 @@
 
   <div class="mt-6 flex items-center justify-center">
     <span class="isolate inline-flex  w-6/12">
-      <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative items-center rounded-l bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-full">
+      <a id="docs-btn" href="https://github.com/davidesantangelo/searq.org/wiki" class="relative items-center rounded-l bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-full">
         <i class="fa-brands fa-github"></i>
       </a>
       <%= link_to exports_path, id: 'export-tool-btn', class: "relative -ml-px  items-center bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 hover:underline focus:z-10 w-full" do %>
